--- a/.github/workflows/apptainer_exachem.yml
+++ b/.github/workflows/apptainer_exachem.yml
@@ -22,10 +22,12 @@ jobs:
             - MPI-PR
           gpu:
             - nvidia
-            - amd_rocm6.0
-            - amd_rocm5.7.3
-            - amd_rocm5.6
-            - amd_rocm5.5.1
+            - amd_gfx908_rocm5.5.1
+            - amd_gfx90a_rocm5.5.1
+            - amd_gfx908_rocm5.6
+            - amd_gfx90a_rocm5.6
+            - amd_gfx908_rocm5.7.3
+            - amd_gfx90a_rocm5.7.3
     steps:
     - name: Get Instruction
       id: get-simd
