--- a/.github/workflows/apptainer_exachem.yml
+++ b/.github/workflows/apptainer_exachem.yml
@@ -24,8 +24,8 @@ jobs:
             - nvidia
             - amd_gfx908_rocm5.5.1
             - amd_gfx90a_rocm5.5.1
-            - amd_gfx908_rocm5.6
-            - amd_gfx90a_rocm5.6
+            - amd_gfx908_rocm.6.0
+            - amd_gfx90a_rocm.6.0
             - amd_gfx908_rocm5.7.3
             - amd_gfx90a_rocm5.7.3
     steps:
