--- a/.github/workflows/apptainer_exachem.yml
+++ b/.github/workflows/apptainer_exachem.yml
@@ -21,6 +21,7 @@ jobs:
           armci_network:
             - MPI-PR
           gpu:
+            - cpu
             - nvidia
             - amd_gfx908_rocm5.5.1
             - amd_gfx90a_rocm5.5.1
@@ -147,7 +148,7 @@ jobs:
         apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libint.tar.bz2 /opt/install/CC/include/libint2/  /opt/install/CC/include/libint2.hpp /opt/install/CC/include/libint2.h  /opt/install/CC/share/libint /opt/install/CC/lib/cmake/libint2 /opt/install/CC/lib/libint2.a  /opt/install/CC/lib/pkgconfig/libint2.pc 
         echo "cache stored"
         ls -l ~/cache
-    - name: test image with apptainer
+    - name: ldd check
       if: ${{ env.push_truefalse == 'true' }}
       run: |
         pwd
@@ -160,3 +161,17 @@ jobs:
         which mpirun
         ldd `which mpirun`
         apptainer exec ${{ env.tag }}:latest ldd /opt/install/CC/bin/ExaChem
+    - name: test image with apptainer
+      if: ${{ env.push_truefalse == 'true' }} && ${{ matrix.gpu == 'cpu' }}
+      run: |
+        pwd
+        ls -la
+        apptainer pull -F ${{ env.tag }}:${{ env.date }}
+        export UCX_TLS=tcp,self
+        export UCX_POSIX_USE_PROC_LINK=n
+        sudo apt-get install -y openmpi-bin openmpi-common libopenmpi-dev
+        which mpirun
+        ldd `which mpirun`
+        mpirun -np 2 apptainer exec ${{ env.tag }}:latest \
+        /opt/install/CC/bin/ExaChem \
+        inputs/waterdft.json
