--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -22,6 +22,8 @@ jobs:
             - MPI-PR
           elpa:
             - Y
+          FC:
+            - gfortran
           gpu:
             - cpu
             - amd_gfx90a_rocm6.0
