cache docker image locally

--- a/.github/workflows/apptainer_exachem.yml
+++ b/.github/workflows/apptainer_exachem.yml
@@ -125,7 +125,6 @@ jobs:
         if [[ -f ~/cache/libint.tar.bz2 ]]; then \
         echo "libint cache present" ; \
         fi
-        if [[ -f ~/cache/ubuntu_jammy.sif ]]; then \                                                                                                 cp ~/cache/ubuntu_jammy.sif ${{ matrix.folder }}/. ; \                                                                                     fi
     - name: Install apptainer
       env:
         APP_VER: 1.2.3
@@ -177,6 +176,7 @@ jobs:
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem/include || true
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem || true
         apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 /opt/install/exachem/lib/libint2.a  /opt/install/exachem/lib/pkgconfig/libint2.pc
+        cp ubuntu_jammy.sif ~/cache/.
         echo "cache stored"
         ls -l ~/cache
     - name: ldd check
