--- a/.github/workflows/apptainer_exachem.yml
+++ b/.github/workflows/apptainer_exachem.yml
@@ -17,7 +17,7 @@ jobs:
           folder:
             - apptainer.ompi41x
           branch:
-            - main
+            - smilib
           armci_network:
             - MPI-PR
           elpa:
