EXACHEM_BRANCH and TAMM_BRANCH

--- a/.github/workflows/apptainer_exachem.yml
+++ b/.github/workflows/apptainer_exachem.yml
@@ -16,7 +16,9 @@ jobs:
         matrix:
           folder:
             - apptainer.ompi41x
-          branch:
+          tamm_branch:
+            - main
+          exachem_branch:
             - main
           armci_network:
             - MPI-PR
@@ -37,17 +39,17 @@ jobs:
             - gpu: nvidia_70
               armci_network: MPI-PR
               folder: apptainer.ompi41x
-              branch: main
+              exachem_branch: main
               elpa: Y
             - gpu: nvidia_80
               armci_network: MPI-PR
               folder: apptainer.ompi41x
-              branch: main
+              exachem_branch: main
               elpa: Y
             - gpu: nvidia_90
               armci_network: MPI-PR
               folder: apptainer.ompi41x
-              branch: main
+              exachem_branch: main
               elpa: Y
     steps:
     - name: Get Instruction
@@ -59,8 +61,8 @@ jobs:
         echo "simd=$(./guess_simd.sh)" >> $GITHUB_ENV
     - name: exachem version tag
       run: |
-        if [[ ${{ matrix.branch }} !=  main ]]; then
-          myversion=-${{ matrix.branch }}
+        if [[ ${{ matrix.exachem_branch }} !=  main ]]; then
+          myversion=-${{ matrix.exachem_branch }}
         else
           myversion=""
         fi
@@ -142,18 +144,10 @@ jobs:
            cd ${{ matrix.folder }} ;\
         apptainer pull docker://ubuntu:jammy ; \
         fi
-    - name: Checkout exachem source
-      uses: actions/checkout@v4
-      with:
-        repository: Exachem/exachem
-        ref: ${{ matrix.branch}}
-        clean: false
-        fetch-depth: 0
-        path: exachem
     - name: build an apptainer container
       run: |
         cd ${{ matrix.folder }}
-        MYUSERNAME=${{ github.actor}} BRANCH=${{ matrix.branch}} GPU=${{ matrix.gpu}} ARMCI_NETWORK=${{ matrix.armci_network}} ELPA=${{ matrix.elpa}} MPI_IMPL=ompi  apptainer build --fakeroot ${{ matrix.folder }}.simg  Singularity
+        MYUSERNAME=${{ github.actor}} EXACHEM_BRANCH=${{ matrix.exachem_branch}} TAMM_BRANCH=${{ matrix.tamm_branch}} GPU=${{ matrix.gpu}} ARMCI_NETWORK=${{ matrix.armci_network}} ELPA=${{ matrix.elpa}} MPI_IMPL=ompi  apptainer build --fakeroot ${{ matrix.folder }}.simg  Singularity
     - name: builddate
       id: build-date
       run: |
