--- a/.github/workflows/apptainer_exachem.yml
+++ b/.github/workflows/apptainer_exachem.yml
@@ -17,7 +17,7 @@ jobs:
           folder:
             - apptainer.ompi41x
           tamm_branch:
-            - main
+            - smilib
           exachem_branch:
             - main
           armci_network:
