--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -19,7 +19,7 @@ jobs:
           exachem_branch:
             - main
           tamm_branch:
-            - smilib
+            - main
           mpich:
             - 3.4.2
           armci_network:
