--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -100,6 +100,9 @@ jobs:
         if [[ -f ~/cache/libint.tar.bz2 ]]; then \
         echo "libint cache present" ; \
         fi
+        if [[ -f ~/cache/libblis.tar.bz2 ]]; then \
+        echo "BLIS cache present" ; \
+        fi
     - name: Install apptainer
       env:
         APP_VER: 1.3.2
@@ -146,6 +149,7 @@ jobs:
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem/include || true
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem || true
         apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 /opt/install/exachem/lib/libint2.a  /opt/install/exachem/lib/pkgconfig/libint2.pc
+        apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libblis.tar.bz2 /opt/install/exachem/lib/libblis* /opt/install/exachem/share/blis* /opt/install/exachem/lib/pkgconfig/blis.pc
         cp ubuntu_focal.sif ~/cache/.
         echo "cache stored"
         ls -l ~/cache
