--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -149,7 +149,13 @@ jobs:
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem/include || true
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem || true
         apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 /opt/install/exachem/lib/libint2.a  /opt/install/exachem/lib/pkgconfig/libint2.pc
-        apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libblis.tar.bz2 /opt/install/exachem/lib/libblis.a /opt/install/exachem/share/blis
+        apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libblis.tar.bz2 \
+        /opt/install/exachem/include/blis \
+        /opt/install/exachem/include/blis.h \
+        /opt/install/exachem/lib/libblis.a \
+        /opt/install/exachem/lib/liblapack.a \
+        /opt/install/exachem/lib/liblapackpp.a \
+        /opt/install/exachem/share/blis
         cp ubuntu_focal.sif ~/cache/.
         echo "cache stored"
         ls -l ~/cache
