--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -31,6 +31,9 @@ jobs:
             - amd_gfx90a_rocm5.7.1
             - amd_gfx90a_rocm5.6
             - amd_gfx90a_rocm5.5.1
+          ubuntu:
+            - focal
+            - jammy
     steps:
     - name: Get Instruction
       id: get-simd
@@ -48,6 +51,9 @@ jobs:
         if [[ ${{ matrix.armci_network }} !=  MPI-PR ]]; then
           net_tag=$(echo ${{ matrix.armci_network }} | tr '[:upper:]' '[:lower:]')
           myversion+=.${net_tag}
+        fi
+        if [[ ${{ matrix.ubuntu }} !=  focal ]]; then
+          myversion+=.${{ matrix.ubuntu }}
         fi
         echo "exachemversion=$myversion" >> $GITHUB_ENV
     - name: tag
@@ -111,16 +117,16 @@ jobs:
         apptainer version
     - name: create sif from docker
       run: |
-        if [  -f ~/cache/ubuntu_focal.sif ]; then \                                                                                                    echo "sif found"
-           cp ~/cache/ubuntu_focal.sif ${{ matrix.folder }}/.
+        if [  -f ~/cache/ubuntu_${{ matrix.ubuntu }}.sif ]; then \                                                                                                    echo "sif found"
+           cp ~/cache/ubuntu_${{ matrix.ubuntu }}.sif ${{ matrix.folder }}/.
         else
            cd ${{ matrix.folder }} ;\
-        apptainer pull docker://ubuntu:focal ; \
+        apptainer pull docker://ubuntu:${{ matrix.ubuntu }} ; \
         fi
     - name: build an apptainer container
       run: |
         cd ${{ matrix.folder }}
-        MYUSERNAME=${{ github.actor}} EXACHEM_BRANCH=${{ matrix.exachem_branch}} TAMM_BRANCH=${{ matrix.tamm_branch}} GPU=${{ matrix.gpu}} ARMCI_NETWORK=${{ matrix.armci_network}}  MPI_IMPL=mpich MPICH=${{ matrix.mpich}}  apptainer build --fakeroot ${{ matrix.folder }}.simg  Singularity
+        MYUSERNAME=${{ github.actor}} UBUNTU_VERSION=${{ matrix.ubuntu}} EXACHEM_BRANCH=${{ matrix.exachem_branch}} TAMM_BRANCH=${{ matrix.tamm_branch}} GPU=${{ matrix.gpu}} ARMCI_NETWORK=${{ matrix.armci_network}}  MPI_IMPL=mpich MPICH=${{ matrix.mpich}}  apptainer build --fakeroot ${{ matrix.folder }}.simg  Singularity
     - name: builddate
       id: build-date
       run: |
@@ -146,7 +152,7 @@ jobs:
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem/include || true
         apptainer exec ${{ matrix.folder }}.simg ls -l /opt/install/exachem || true
         apptainer exec ${{ matrix.folder }}.simg tar cjf ~/cache/libint.tar.bz2 /opt/install/exachem/include/libint2/  /opt/install/exachem/include/libint2.hpp /opt/install/exachem/include/libint2.h  /opt/install/exachem/share/libint /opt/install/exachem/lib/cmake/libint2 /opt/install/exachem/lib/libint2.a  /opt/install/exachem/lib/pkgconfig/libint2.pc
-        cp ubuntu_focal.sif ~/cache/.
+        cp ubuntu_${{ matrix.ubuntu }}.sif ~/cache/.
         echo "cache stored"
         ls -l ~/cache
     - name: ldd check
