--- a/.github/workflows/apptainer_exachem_ompi5x.yaml
+++ b/.github/workflows/apptainer_exachem_ompi5x.yaml
@@ -43,21 +43,25 @@ jobs:
             - gpu: nvidia_70
               ga_runtime: MPI_RMA
               folder: apptainer.ompi5x
+              ompi: 5.0.3
               exachem_branch: main
               elpa: Y
             - gpu: nvidia_70
               ga_runtime: MPI_PROGRESS_RANK
               folder: apptainer.ompi5x
+              ompi: 4.1.6
               exachem_branch: main
               elpa: Y
             - gpu: nvidia_80
               ga_runtime: MPI_PROGRESS_RANK
               folder: apptainer.ompi5x
+              ompi: 4.1.6
               exachem_branch: main
               elpa: Y
             - gpu: nvidia_90
               ga_runtime: MPI_PROGRESS_RANK
               folder: apptainer.ompi5x
+              ompi: 4.1.6
               exachem_branch: main
               elpa: Y
     steps:
