--- a/.github/workflows/apptainer_exachem_ompi5x.yaml
+++ b/.github/workflows/apptainer_exachem_ompi5x.yaml
@@ -74,7 +74,7 @@ jobs:
         echo "simd=$(./guess_simd.sh)" >> $GITHUB_ENV
     - name: exachem version tag
       run: |
-        myversion=ompi-${{ matrix.ompi }}
+        myversion=.ompi-${{ matrix.ompi }}
         if [[ ${{ matrix.exachem_branch }} !=  main ]]; then
           myversion=.${{ matrix.exachem_branch }}
         fi
@@ -91,7 +91,7 @@ jobs:
         fi
     - name: tag
       run: |
-        echo "tag=oras://ghcr.io/${{ github.repository }}/apptainer${{ env.exachemversion}}.${{ env.ga_runtime}}${{ env.elpa}}ompi41x" >> $GITHUB_ENV
+        echo "tag=oras://ghcr.io/${{ github.repository }}/apptainer${{ env.exachemversion}}.${{ env.ga_runtime}}${{ env.elpa}}" >> $GITHUB_ENV
     - name: echo-tag
       run: |
         echo ' the apptainer tag is ' '${{ env.tag }}'
