--- a/.github/workflows/apptainer_exachem_ompi5x.yaml
+++ b/.github/workflows/apptainer_exachem_ompi5x.yaml
@@ -84,14 +84,14 @@ jobs:
         echo "exachemversion=$myversion" >> $GITHUB_ENV
         if [[ ${{ matrix.ga_runtime }} !=  MPI_PROGRESS_RANK ]]; then
           net_tag=$(echo ${{ matrix.ga_runtime }} | tr '[:upper:]' '[:lower:]')
-          echo "ga_runtime="${net_tag}"." >> $GITHUB_ENV
+          echo "ga_runtime=."${net_tag} >> $GITHUB_ENV
         fi
         if [[ ${{ matrix.elpa }} ==  Y ]]; then
-          echo "elpa="elpa"." >> $GITHUB_ENV
+          echo "elpa=.elpa" >> $GITHUB_ENV
         fi
     - name: tag
       run: |
-        echo "tag=oras://ghcr.io/${{ github.repository }}/apptainer${{ env.exachemversion}}.${{ env.ga_runtime}}${{ env.elpa}}" >> $GITHUB_ENV
+        echo "tag=oras://ghcr.io/${{ github.repository }}/apptainer${{ env.exachemversion}}${{ env.ga_runtime}}${{ env.elpa}}" >> $GITHUB_ENV
     - name: echo-tag
       run: |
         echo ' the apptainer tag is ' '${{ env.tag }}'
