--- a/.github/workflows/apptainer_exachem_ompi5x.yaml
+++ b/.github/workflows/apptainer_exachem_ompi5x.yaml
@@ -40,6 +40,12 @@ jobs:
             - amd_gfx908_rocm5.7.3
             - amd_gfx90a_rocm5.7.3
           include:
+            - gpu: cpu
+              ga_runtime: MPI_RMA
+              folder: apptainer.ompi5x
+              ompi: 5.0.3
+              exachem_branch: main
+              elpa: Y
             - gpu: nvidia_70
               ga_runtime: MPI_RMA
               folder: apptainer.ompi5x
