--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -46,6 +46,7 @@ jobs:
     - name: exachem version tag
       run: |
         myversion=-${{ matrix.exachem_branch }}
+        myversion+=.${{ matrix.gpu }}
         if [[ ${{ matrix.ga_runtime }} !=  MPI_2SIDED ]]; then
           net_tag=$(echo ${{ matrix.ga_runtime }} | tr '[:upper:]' '[:lower:]')
           myversion+=.${net_tag}
