--- a/.github/workflows/apptainer_exachem_mpich.yaml
+++ b/.github/workflows/apptainer_exachem_mpich.yaml
@@ -42,6 +42,8 @@ jobs:
               ga_runtime: MPI_PROGRESS_RANK
               ubuntu: jammy
               gpu: cpu
+              exachem_branch: main
+              tamm_branch: main
     steps:
     - name: Get Instruction
       id: get-simd
